// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownContainer should be rendered correctly 1`] = `
<div
  className="uui-dropdown-body -lock-focus root vPadding-18 padding-24 container"
  style={
    Object {
      "maxHeight": undefined,
      "maxWidth": 300,
      "minHeight": 600,
      "minWidth": 300,
    }
  }
  tabIndex={-1}
>
  <span
    className="uui-button-box uui-enabled container root uui-button uui-fill-solid uui-color-primary uui-size-36"
    tabIndex={-1}
  />
</div>
`;

exports[`DropdownContainer should be rendered correctly with minimum props 1`] = `
<div
  className="uui-dropdown-body -lock-focus root container"
  style={
    Object {
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
  tabIndex={-1}
>
  <span
    className="uui-button-box uui-enabled container root uui-button uui-fill-solid uui-color-primary uui-size-36"
    tabIndex={-1}
  />
</div>
`;
